--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -31,14 +31,14 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    margin-right: 10px;
+    margin-right: 8px;
   }
   
   .online {
     background-color: green;
   }
   
-  offline {
+  .offline {
     background-color: red;
   }
   
